RESOLVED FIXED315150
REGRESSION(313145@main): 3 unexpected failures on MVT tests on suite hls-shaka-test
https://bugs.webkit.org/show_bug.cgi?id=315150
Summary REGRESSION(313145@main): 3 unexpected failures on MVT tests on suite hls-shak...
Carlos Alberto Lopez Perez
Reported 2026-05-19 17:30:56 PDT
Both the GTK and WPE post-commit MVT bots are unexpectedly failing 3 tests since 313145@main I checked that locally on WPE. 1. Checkout & build WPE on 313145@main Run. $ Tools/Scripts/run-mvt-tests --wpe --headless --release --suite hls-shaka-test [...] - 3 tests were unexpected failures: HLS_MP2TS_AVC_AAC__Playback HLS_MP2TS_AVC_AAC__Seek HLS_MP2TS_AVC_AAC_PLAYBACK_START_TIME__Performance Full log: https://build.webkit.org/api/v2/logs/52211875/raw_inline 2. Checkout & build WPE on the previous commit (313145@main) Run the same test: no unexpected failures/timeouts anymore. This is the issue on the bots: * WPE last good run: https://build.webkit.org/#/builders/1553/builds/8039 * WPE first bad run: https://build.webkit.org/#/builders/1553/builds/8040 * GTK last good run: https://build.webkit.org/#/builders/1552/builds/6439 * GTK first bad run: https://build.webkit.org/#/builders/1552/builds/6440
Attachments
Philippe Normand
Comment 1 2026-05-20 02:09:07 PDT
EWS
Comment 2 2026-05-21 02:36:56 PDT
Committed 313657@main (4a7ed8d2f72f): <https://commits.webkit.org/313657@main> Reviewed commits have been landed. Closing PR #65267 and removing active labels.
EWS
Comment 3 2026-05-21 04:51:57 PDT
Committed 305877.651@webkitglib/2.52 (63e41944a88d): <https://commits.webkit.org/305877.651@webkitglib/2.52> Reviewed commits have been landed. Closing PR #65405 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.