REGRESSION(313145@main): 3 unexpected failures on MVT tests on suite hls-shaka-test https://bugs.webkit.org/show_bug.cgi?id=315150

Reviewed by Xabier Rodriguez-Calvar.

Restore the timestamp update logic from before 313145@main, some values will be reported as negative
but actual timestamps stored in buffers are guaranteed to be positive.

Driving-by, fix a python syntax warning in run-mvt-tests, apparently 'return' is not allowed in
finally blocks anymore.

* Source/WebCore/platform/graphics/gstreamer/MediaSampleGStreamer.cpp:
(WebCore::MediaSampleGStreamer::updateSampleTimestamps):
(WebCore::MediaSampleGStreamer::offsetTimestampsBy):
* Tools/Scripts/run-mvt-tests:

Canonical link: https://commits.webkit.org/313657@main